<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Switch
        android:id="@+id/themeSwitcher"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:text="Switch"
        android:textSize="72sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/relativeLayout"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout"
        app:layout_constraintTop_toTopOf="@+id/relativeLayout" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout style="?bottomMenu">

            <ImageView
                android:id="@+id/imageProfile"
                style="@style/ImageView"
                android:onClick="openProfile"
                android:src="@drawable/ic_home_grey_24dp" />

            <ImageView
                android:id="@+id/imageGrade"
                style="@style/ImageView"
                android:onClick="openGrade"
                android:src="@drawable/ic_school_grey_24dp" />

            <ImageView
                android:id="@+id/imageSearch"
                style="@style/ImageView"
                android:onClick="openSearch"
                android:src="@drawable/ic_search_grey_24dp" />

            <ImageView
                android:id="@+id/imageFavorites"
                style="@style/ImageView"
                android:onClick="openFavorites"
                android:src="@drawable/ic_star_border_grey_24dp" />

            <ImageView
                android:id="@+id/imageSettings"
                style="@style/ImageView"
                android:src="@drawable/ic_settings_orange_24dp" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="15dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_vis"
                android:textColor="@color/colorGrey" />

            <RadioButton
                android:id="@+id/radioButton0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/all"
                android:textColor="@color/colorGrey" />

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/groupmates"
                android:textColor="@color/colorGrey" />

            <RadioButton
                android:id="@+id/radioButton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/me"
                android:textColor="@color/colorGrey" />
        </RadioGroup>

        <Button
            android:id="@+id/button"
            style="@style/Btn"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="100dp"
            android:onClick="exit"
            android:text="@string/exit" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>