<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorDarkGrey"
    tools:context="com.example.jenya.studentachievements.activities.AuthActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/sfu" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="76dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/loginText"
            android:drawableLeft="@drawable/ic_person_grey_24dp"
            android:drawableStart="@drawable/ic_person_grey_24dp"
            android:hint="@string/login"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center"
            android:layout_marginBottom="15dp"
            style="@style/EditText"/>

        <EditText
            android:drawableLeft="@drawable/ic_lock_grey_24dp"
            android:drawableStart="@drawable/ic_lock_grey_24dp"
            android:id="@+id/passText"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            style="@style/EditText"/>

        <Button
            android:id="@+id/buttonEnter"
            android:layout_gravity="center_horizontal"
            android:onClick="enter"
            android:text="@string/enter"
            style="@style/Btn"/>
    </LinearLayout>

</RelativeLayout>